--- a/TestVenturesSoft/app/src/main/res/values-prt/strings.xml
+++ b/TestVenturesSoft/app/src/main/res/values-prt/strings.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">TestVenturesSoft</string>
+    <string name="languages">línguas</string>
+    <string name="fieldsEmpty">Há um campo vazio</string>
 </resources>
